--- a/app/src/main/res/layout/fragment_course_add.xml
+++ b/app/src/main/res/layout/fragment_course_add.xml
@@ -8,7 +8,7 @@
 
 
     <EditText
-        android:id="@+id/edit_courseid_"
+        android:id="@+id/edit_courseid"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="@string/enter_courseid__tip"
