Bugs are worked out

--- a/app/src/main/res/layout/fragment_course_add.xml
+++ b/app/src/main/res/layout/fragment_course_add.xml
@@ -12,32 +12,28 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="@string/enter_courseid__tip"
-        android:inputType="text"
-        android:text="@+id/enter_courseid" />
-
-    <EditText
-        android:id="@+id/edit_long_desc"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="@string/enter_short_desc"
-        android:inputType="text"
-        android:text="@+id/enter_long_desc" />
+        android:inputType="text" />
 
     <EditText
         android:id="@+id/edit_short_desc"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:hint="@string/enter_short_desc"
+        android:inputType="text" />
+
+    <EditText
+        android:id="@+id/edit_long_desc"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:hint="@string/enter_long_desc"
-        android:inputType="text"
-        android:text="@+id/enter_short_desc" />
+        android:inputType="text" />
 
     <EditText
         android:id="@+id/edit_prereqs"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="@string/enter_prereqs"
-        android:inputType="text"
-        android:text="@+id/enter_prereqs" />
+        android:inputType="text" />
 
     <Button
         android:id="@+id/btn_course"
