--- a/app/src/main/res/layout/fragment_course_add.xml
+++ b/app/src/main/res/layout/fragment_course_add.xml
@@ -39,5 +39,6 @@
         android:id="@+id/btn_course"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="end"
         android:text="@string/btn_add_course" />
 </LinearLayout>
