Icons are changed and theme is working.Prior to implement edit course

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,10 +3,35 @@
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
+        <item name="colorPrimary">@color/uwMetalGold</item>
+        <item name="colorPrimaryDark">@color/uwGold</item>
+        <item name="colorAccent">@color/uwMetalGold</item>
+        <item name="android:textColor">@color/uwPurple</item>
+        <item name="android:textSize">24sp</item>
+        <!--<item name="android:tint">@color/uwPurple</item>-->
+        <item name="android:editTextColor">@color/uwDarkGray</item>
+        <item name="android:textColorHint">@color/uwDarkGray</item>
     </style>
+    <!-- Styles for all EditText -->
+    <style name="EditTextStyle" >
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textSize">20sp</item>
+        <item name="android:textColor">@color/uwDarkGray</item>
+        <item name="android:typeface">monospace</item>
+
+    </style>
+    <style name="CourseIdEditTextStyle" parent="EditTextStyle">
+        <item name="android:textSize">24sp</item>
+        <item name="android:typeface">serif</item>
+    </style>
+
+    <style name="uwButtonStyle" >
+        <item name="android:typeface">serif</item>
+        <item name="android:background">@drawable/uw_button</item>
+        <item name="android:textColor">@color/uw_button_colors</item>
+    </style>
+
 
     <style name="AppTheme.NoActionBar">
         <item name="windowActionBar">false</item>
