--- a/app/src/main/res/layout/fragment_course_add.xml
+++ b/app/src/main/res/layout/fragment_course_add.xml
@@ -12,33 +12,41 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="@string/enter_courseid__tip"
-        android:inputType="text" />
+        android:inputType="text"
+        style="@style/EditTextStyle" />
 
     <EditText
         android:id="@+id/edit_short_desc"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="@string/enter_short_desc"
-        android:inputType="text" />
+        android:inputType="text"
+        style="@style/CourseIdEditTextStyle" />
 
     <EditText
         android:id="@+id/edit_long_desc"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="@string/enter_long_desc"
-        android:inputType="text" />
+        android:inputType="text"
+        style="@style/CourseIdEditTextStyle" />
 
     <EditText
         android:id="@+id/edit_prereqs"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="@string/enter_prereqs"
-        android:inputType="text" />
+        android:inputType="text"
+        style="@style/EditTextStyle" />
 
     <Button
         android:id="@+id/btn_course"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="end"
-        android:text="@string/btn_add_course" />
+        android:text="@string/btn_add_course"
+        style="@style/uwButtonStyle" />
+
+
+
 </LinearLayout>
