--- a/app/src/main/res/menu/menu_course.xml
+++ b/app/src/main/res/menu/menu_course.xml
@@ -1,10 +1,11 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="edu.tacoma.uw.css.quandm.webserviceslab.CourseActivity">
+    tools:context="edu.uw.tacoma.css.mmuppa.webserviceslab.CourseActivity">
+
     <item
-        android:id="@+id/action_settings"
-        android:orderInCategory="100"
-        android:title="@string/action_settings"
-        app:showAsAction="never" />
+        android:id="@+id/action_about"
+        android:icon="@android:drawable/ic_menu_info_details"
+        android:title="@string/action_about"
+        app:showAsAction="ifRoom"/>
 </menu>
